deployment.yml
apiVersion: v1
kind: Service
metadata:
  #Cambiame:
  name: teagile-eureka-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: 8080-tcp

  #Ojo con los selectores, deben coincidir con los "labels" del deployment"
  #Cambiame:
  selector:
    app: teagile-eureka-service
    tier: backend
  type: LoadBalancer
---
apiVersion: apps/v1beta2
kind: Deployment
#Cambiame:
metadata:
  name: teagile-eureka-service-deployment
spec:
  selector:
    matchLabels:
      #Cambiame:
      app: teagile-eureka-service
      tier: backend
  template:
    metadata:

      #Ojo con los selectores, deben coincidir con los "labels" del service"
      #Cambiame:
      labels:
        app: teagile-eureka-service
        tier: backend
    spec:
      imagePullSecrets:
      - name: docker-registry-innersource
      containers:
      #Cambiame:
      - image: registry-innersource.soprasteria.com/smartup/hackaton-asperger/teagile/teagile-eureka-service:master
        name: teagile-eureka-service
        imagePullPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  #Cambiame:
  name: teagile-eureka-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  #Cambiame: (solo la parte de antes de .apps.12b...)
  - host: teagile-eureka-service.apps.12b5129e45db47179d12.westeurope.aksapp.io
    http:
      paths:
      #Cambiame:
      - backend:
          #Cambiame:
          #Ojo!... Tiene que coincidir con el nombre del servicio.
          serviceName: teagile-eureka-service
          servicePort: 8080
